# pythonFastAPI

./: README.md  database.db  pyproject.toml
fastpythonapi/: app.py  database.py  security.py
migrations/: env.py
migrations/versions/: 94fc2cc85af1_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
