[tool.poetry]
name = "fastpythonapi"
version = "0.1.0"
description = ""
authors = ["Henrique Cesar <henriquecesar.eletro@gmail.com>"]
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
pydantic = {extras = ["email"], version = "^2.10.4"}
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"
alembic = "^1.14.0"

[tool.ruff]
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select= ['I','F','E','W','PL','PT']

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.6.4"
httpx = "^0.27.2"

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev fastpythonapi/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastpythonapi -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
